# qr.py

./: .gitignore  README.md  pyproject.toml  qr.py
