[project]
name = "qr-py"
version = "1.0.0"
description = "QR generation"
license = "LICENSE"
readme = "README.md"
requires-python = "<4.0,>=3.13"
dependencies = [
    "qrcode[pil] (>=8.2,<9.0)"
]

[tool.poetry]
packages = [{include = "qr"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
